--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/script.js"></script>
     <title>Document</title>
+    
 </head>
 <body>
+    <header>
+        <h1>Hi</h1>
+    </header>
+    <main>
+        <h2><p>Hello</p></h2>
+    </main>
+    <footer>
+        <p><a href="tel:111111111111">Tel</a></p>
+    </footer>
     
 </body>
 </html>
